@@ -1,6 +1,7 @@
 Release Notes
 
 * current
+  * added validation check for pmerge 
   * added disableFurtherAttempt not to retry killed pmerge
   * added hint for JEDI_Events
   * using executemany to insert event ranges
